<?xml version="1.0" encoding="UTF-8"?>

    <RelativeLayout tools:context="com.example.twotouch.PickUpActivity" android:paddingTop="@dimen/activity_vertical_margin" android:paddingRight="@dimen/activity_horizontal_margin" android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingBottom="@dimen/activity_vertical_margin" android:layout_height="match_parent" android:layout_width="match_parent" xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/textView" android:textSize="18sp" android:text="@string/subject"/>

    <EditText android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/editText" android:text="@string/button_pickup" android:layout_alignParentStart="true" android:layout_alignParentLeft="true" android:layout_below="@+id/textView"/>

    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/textView3" android:text="@string/place" android:layout_alignParentStart="true" android:layout_alignParentLeft="true" android:layout_below="@+id/editText" android:layout_marginTop="16dp" android:textAppearance="?android:attr/textAppearanceMedium"/>


    -<RadioGroup android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/rg_place" android:layout_alignParentStart="true" android:layout_alignParentLeft="true" android:layout_below="@+id/textView3">

    <RadioButton android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/radioButton1" android:text="@string/station" android:checked="true"/>

    <RadioButton android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/radioButton2" android:text="@string/school"/>

    <RadioButton android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/radioButton3" android:text="@string/always"/>

</RadioGroup>

    <Button android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/button" android:text="@string/button_send" android:layout_below="@+id/rg_place" android:layout_centerHorizontal="true"/>

</RelativeLayout>