<?xml version="1.0" encoding="UTF-8"?>

    <RelativeLayout tools:context="com.example.twotouch.NoDinnerActivity" android:paddingTop="@dimen/activity_vertical_margin" android:paddingRight="@dimen/activity_horizontal_margin" android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingBottom="@dimen/activity_vertical_margin" android:layout_height="match_parent" android:layout_width="match_parent" xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/textView" android:textSize="18sp" android:text="@string/subject"/>

    <EditText android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/editText" android:text="@string/button_no_dinner" android:layout_alignParentStart="true" android:layout_alignParentLeft="true" android:layout_below="@+id/textView"/>

    <Button android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/button" android:text="@string/button_send" android:layout_below="@+id/editText" android:layout_marginTop="28dp" android:layout_centerHorizontal="true"/>

</RelativeLayout>